root index.html is done

--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
   <h1>Welcome to Learning Web Projects</h1>
   <p>Explore my web development projects below:</p>
   <ul>
-    <li><a href="01 - Signup Page/index.html">Signup Page</a></li>
-    <li><a href="02 - Photo Gallery/index.html">Photo Gallery</a></li>
-    <li><a href="03 - Landing Page/index.html">Landing Page</a></li>
-    <li><a href="04 - FAQs/index.html">FAQs Section</a></li>
-    <li><a href="05 - Calculator/index.html">Calculator (Tailwind CSS)</a></li>
+    <li><a href="./01 - Signup Page - HTML CSS Basics/index.html">Signup Page using basic HTML and CSS</a></li>
+    <li><a href="./02 - Photo gallery - CSS Grid Basic/index.html">Photo Gallery using CSS Grid</a></li>
+    <li><a href="./04 - FAQs - Javascript Basic Learning/index.html">FAQs Section using basic Javascript</a></li>
+    <li><a href="./05-Calculator -  Tailwind CSS Javascript Basic Learning/index.html">Calculator using Tailwind CSS and basic Javascript</a></li>
   </ul>
 </body>
 </html>
