--- a/05-Calculator -  Tailwind CSS Javascript Basic Learning/index.html
+++ b/05-Calculator -  Tailwind CSS Javascript Basic Learning/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="styles.css" />
     <style>
         input[type="button"]:active {
           transform: scale(0.95); /* Slightly reduce size */
@@ -12,7 +12,7 @@
         }
       </style>
   </head>
-  <body class="h-screen w-screen p-0 m-0 bg-blue-100">
+  <body class="h-screen w-screen p-0 m-0 bg-blue-100 flex justify-center items-center">
     <div
       class="container p-0 m-0 w-screen h-screen flex justify-center items-center" >
       <div class="calculator bg-gray-800 rounded-lg p-4">
