--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <ul>
     <li><a href="./01 - Signup Page - HTML CSS Basics/index.html">Signup Page using basic HTML and CSS</a></li>
     <li><a href="./02 - Photo gallery - CSS Grid Basic/index.html">Photo Gallery using CSS Grid</a></li>
+    <li><a href="./03 - Modern Landing Page - CSS Flex and Responsive Project/index.html">Modern Landing Page using CSS Flex and Responsive</a></li>
     <li><a href="./04 - FAQs - Javascript Basic Learning/index.html">FAQs Section using basic Javascript</a></li>
     <li><a href="./05-Calculator -  Tailwind CSS Javascript Basic Learning/index.html">Calculator using Tailwind CSS and basic Javascript</a></li>
   </ul>
